--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                 基于科学数据分析，为环境治理决策提供专业支撑
             </p>
             <div class="text-sm text-gray-500">
-                © 2024 海港区环境监测项目 | 数据更新时间：2024年12月
+                © 2025 益起环保队劳动实践项目 | 数据更新时间：2025年12月
             </div>
         </div>
     </footer>
